@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - refactor ::ChaCha20::int_rand
 
 0.002  2018-09-13 08:38:41 CEST
    - first release
